--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "puppeteer": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-error-boundary": "^3.1.1",
     "react-full-screen": "^1.0.1",
     "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.2",
