--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.1.1",
     "react-full-screen": "^1.0.1",
+    "react-image-gallery": "^1.0.9",
     "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
