--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-full-screen": "^1.0.1",
     "react-image-gallery": "^1.0.9",
     "react-leaflet": "^3.1.0",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
