--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^5.0.0",
     "puppeteer": "^8.0.0",
     "react": "^17.0.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.1.1",
     "react-full-screen": "^1.0.1",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toggle-dark-mode": "^1.0.4",
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
     "web-vitals": "^1.0.1"
