--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "jest": "^26.6.0",
+    "jest-canvas-mock": "^2.3.1",
     "leaflet": "^1.7.1",
     "node-sass": "^5.0.0",
     "puppeteer": "^8.0.0",
@@ -23,7 +25,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-toggle-dark-mode": "^1.0.4",
+    "react-test-renderer": "^17.0.2",
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
     "web-vitals": "^1.0.1"
@@ -31,7 +33,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
