--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest": "^26.6.0",
     "jest-canvas-mock": "^2.3.1",
     "leaflet": "^1.7.1",
+    "netlify-cli": "^3.13.10",
     "node-sass": "^5.0.0",
     "puppeteer": "^8.0.0",
     "react": "^17.0.1",
