--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jest": "^26.6.0",
-    "jest-canvas-mock": "^2.3.1",
     "leaflet": "^1.7.1",
     "netlify-cli": "^3.13.10",
     "node-sass": "^5.0.0",
@@ -54,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "canvas": "^2.7.0"
   }
 }
